# python-project

./: .gitignore  README.md  database.py  db_schema_sync_client.spec  pyproject.toml  report.py  requirements.txt  start.py  start_desktop.sh
.github/workflows/: build-windows.yml
data/: app.db
docs/: PRD-desktop-client-phase-1.md
docs/plans/: 2026-04-08-desktop-client-phase-1.md  2026-04-14-lightweight-ui-design.md  2026-04-14-lightweight-ui-implementation-plan.md  2026-04-14-lightweight-ui-page-task-plan.md  2026-04-14-lightweight-ui-prototype.md  2026-04-20-k8s-deployment-management.md
scripts/: run_desktop.sh
src/db_schema_sync_client/: __init__.py  app.py  paths.py
src/db_schema_sync_client/domain/: __init__.py  diff.py  models.py
src/db_schema_sync_client/infrastructure/: __init__.py  app_store.py  credentials.py  db_connection.py  db_metadata.py
src/db_schema_sync_client/k8s/: __init__.py
src/db_schema_sync_client/resources/: styles.qss
src/db_schema_sync_client/services/: __init__.py  cluster_service.py  comparator.py  dialects.py  report_service.py  sql_generator.py  sync_executor.py
src/db_schema_sync_client/ui/: __init__.py  cluster_dialog.py  (+12 more)
src/legacy/: comparator.py  config.py  desktop_app.py  desktop_app_v2.py  desktop_app_v3.py  main.py  sync.py  test_pyqt.py
tests/integration/: test_sync_executor.py
tests/ui/: test_desktop_ui.py
tests/unit/: test_app_store.py  test_auth.py  test_cluster_service.py  test_cluster_store.py  test_comparator.py  test_dialects.py  test_metadata_reader.py  test_report_service.py  test_sql_generator.py
(+16 files in other folders)
